# mesagisto-center

./: Cargo.toml  README.md  build.rs
.github/: Dockerfile
.github/workflows/: pre-release.yml  release.yml
src/: config.rs  ext.rs  log.rs  main.rs  room.rs  tls.rs
src/server/: mod.rs  quic.rs  websocket.rs
