[package]
name = "mesagisto-center"
version = "0.1.0"
edition = "2021"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]
dev = ["rcgen"]

[dependencies]

hex = "0.4.3"
uuid = { version = "1.1.2", features = ["serde","v4"] }

# serde
serde = { version = "1.0.140",features = ["derive", "rc"]}
ciborium = "0.2.0"
serde_bytes = "0.11.6"
serde_yaml = "0.9.4"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"

# net
quinn = { version = "0.8.3" }
tokio-tungstenite = { version = "0.17.2", default-features = false, features = []}


# tls
rustls = { version = "0.20.6", features = ["quic"] }
rustls-pemfile = "1.0.1"
rcgen = { version = "0.9.3", optional = true }
tokio-rustls = "0.23.4"

# logging
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["tracing-log", "std", "local-time","fmt"] }
tracing-error = "0.2.0"
colored = "2.0.0"

# time
time = { version = "0.3.12", features = ["macros", "local-offset"] }
chrono = "0.4.19"

# error-handling
color-eyre = "0.6.2"

# asynchronous
tokio = { version = "1.20.1", default-features = false, features = ["macros","signal","rt-multi-thread","sync","fs","io-util"] }
futures-util = "0.3.21"
dashmap = "5.3.4"

# pattern
singleton = { branch= "master", git = "https://github.com/Itsusinn/singleton-rs.git" }
automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
educe = { version = "0.4.19", default-features = false, features = ["Default"] }
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }
bytes = { version = "1.2.0", features = ["serde"] }
once_cell = "1.13.0"
either = "1.7.0"
arcstr = { version = "1.1.4", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.58"
fs_extra = "1.2.0"
glob = "0.3.0"