[package]
name = "mesagisto-center"
version = "0.1.0"
edition = "2021"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]
dev = ["rcgen"]
tokio-console = ["console-subscriber","tokio/tracing"]

[dependencies]
hex = "0.4.3"
uuid = { version = "1.2.1", features = ["serde","v4"] }

# serde
serde = { version = "1.0.147",features = ["derive", "rc"]}
ciborium = "0.2.0"
serde_bytes = "0.11.7"
serde_yaml = "0.9.14"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"

# net
tokio-tungstenite = { version = "0.17.2", default-features = false }

# tls
rustls = { version = "0.20.7", features = ["quic"] }
rustls-pemfile = "1.0.1"
rcgen = { version = "0.10.0", optional = true }
tokio-rustls = "0.23.4"

# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["tracing-log", "std", "local-time","fmt"] }
tracing-error = "0.2.0"
colored = "2.0.0"
console-subscriber = { version = "0.1.8", optional = true }

# time
time = { version = "0.3.16", features = ["macros", "local-offset"] }
chrono = "0.4.22"

# error-handling
color-eyre = "0.6.2"

# asynchronous
tokio = { version = "1.21.2", features = ["net","sync","fs","time","macros","signal","rt-multi-thread","io-util"] }
futures-util = "0.3.25"
dashmap = "5.4.0"

# pattern
singleton = { branch= "master", git = "https://github.com/Itsusinn/singleton-rs.git" }
automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
educe = { version = "0.4.20", default-features = false, features = ["Default"] }
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }
bytes = { version = "1.2.1", features = ["serde"] }
once_cell = "1.16.0"
either = "1.8.0"
arcstr = { version = "1.1.4", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.66"
fs_extra = "1.2.0"
glob = "0.3.0"

[profile.release]
debug = 1
strip = "debuginfo"
